hphp/hack/test/typecheck/extends/bad/interface_extends_abstract_class_bad.php
<?hh // strict
/**
 * Copyright (c) 2020-present, Facebook, Inc.
 * All rights reserved.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the "hack" directory of this source tree.
 *
 *
 */

abstract class A {}
interface B extends A {}
